// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshot renders 1`] = `
<div
  className="primary-card card"
>
  <div
    className="card-header"
  >
    <div
      className="card-info"
    >
      <span>
        Updated Date: 
        7.6.2021 17:41:55
      </span>
      <span
        className="number"
      >
        6
      </span>
      <span
        className="text"
      >
        POINTS
      </span>
    </div>
  </div>
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      <button
        className="delete-btn btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      className="short-info"
    >
      (https://news.ycombinator.com)
    </div>
    <div
      className="card-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M8 5.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V6a.5.5 0 01.5-.5z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M7.646 4.646a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L8 5.707 5.354 8.354a.5.5 0 11-.708-.708l3-3z"
            fillRule="evenodd"
          />
        </svg>
         Up vote
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 7.646a.5.5 0 01.708 0L8 10.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M8 4.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V5a.5.5 0 01.5-.5z"
            fillRule="evenodd"
          />
        </svg>
         Down Vote
      </button>
    </div>
  </div>
</div>
`;

exports[`card test 1`] = `
<div
  className="primary-card card"
>
  <div
    className="card-header"
  >
    <div
      className="card-info"
    >
      <span>
        Updated Date: 
      </span>
      <span
        className="number"
      />
      <span
        className="text"
      >
        POINTS
      </span>
    </div>
  </div>
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      <button
        className="delete-btn btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M8 15A7 7 0 108 1a7 7 0 000 14zm0 1A8 8 0 108 0a8 8 0 000 16z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      className="short-info"
    >
      (https://news.ycombinator.com)
    </div>
    <div
      className="card-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M8 5.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V6a.5.5 0 01.5-.5z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M7.646 4.646a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L8 5.707 5.354 8.354a.5.5 0 11-.708-.708l3-3z"
            fillRule="evenodd"
          />
        </svg>
         Up vote
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4.646 7.646a.5.5 0 01.708 0L8 10.293l2.646-2.647a.5.5 0 01.708.708l-3 3a.5.5 0 01-.708 0l-3-3a.5.5 0 010-.708z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M8 4.5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V5a.5.5 0 01.5-.5z"
            fillRule="evenodd"
          />
        </svg>
         Down Vote
      </button>
    </div>
  </div>
</div>
`;
